5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4125/executions/1585_1017.log
== TEST (2019-03-25 13:47:17) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
t1 = radians(float(input("Longitude de g1: ")))
t1 = radians(float(input("Longitude de g2: ")))
r = 6371.01
d = r*(acos*((sin(t1)*sin(t2)) + (cos(t1)* cos(t2)* cos(g1- g2)))

		 
-- ERROR:
File "XXXX", line 13
    
       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:47:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
t1 = radians(float(input("Longitude de g1: ")))
t1 = radians(float(input("Longitude de g2: ")))
r = 6371.01
d = r*(acos*((sin(t1)*sin(t2)) + (cos(t1)* cos(t2)* cos(g1- g2)))
print(round(d, 2))
-- ERROR:
File "XXXX", line 11
    print(round(d, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:48:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("Longitude de g1: ")))
g2 = radians(float(input("Longitude de g2: ")))
r = 6371.01
d = r*(acos*((sin(t1)*sin(t2)) + (cos(t1)* cos(t2)* cos(g1- g2)))
print(round(d, 2))
-- ERROR:
File "XXXX", line 11
    print(round(d, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:49:31) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P2: ")))
t2 = radians(float(input("Latitude de t2: ")))
g2 = radians(float(input("Longitude de g2: ")))
r = 6371.01
d = r*(acos*((sin(t1)*sin(t2)) + (cos(t1)* cos(t2)* cos(g1- g2)))
print(round(d, 2))
-- ERROR:
File "XXXX", line 11
    print(round(d, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:50:06) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P2: ")))
t2 = radians(float(input("Latitude de t2: ")))
g2 = radians(float(input("Longitude de g2: ")))
r = 6371.01
d = r*(acos*((sin(t1)*sin(t2)) + (cos(t1)* cos(t2)* cos(g1- g2)))
print(round(radians(d, 2)))
-- ERROR:
File "XXXX", line 11
    print(round(radians(d, 2)))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:51:02) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P2: ")))
t2 = radians(float(input("Latitude de t2: ")))
g2 = radians(float(input("Longitude de g2: ")))
r = 6371.01
d = r*(acos*((sin(t1)*sin(t2)) + (cos(t1)* cos(t2)* cos(g1- g2)))
print(round(d, 2))
-- ERROR:
File "XXXX", line 11
    print(round(d, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:52:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P2: ")))
t2 = radians(float(input("Latitude de t2: ")))
g2 = radians(float(input("Longitude de g2: ")))
r = 6371.01
d = r*(acos*((sin(t1)*sin(t2)) + (cos(t1)* cos(t2)* cos(g1- g2))))
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d = r*(acos*((sin(t1)*sin(t2)) + (cos(t1)* cos(t2)* cos(g1- g2))))
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:52:46) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P2: ")))
t2 = radians(float(input("Latitude de t2: ")))
g2 = radians(float(input("Longitude de g2: ")))
r = 6371.01
d = r*(acos*((sin(t1)*sin(t2)) + (cos(t1)* cos(t2)* cos(g1- g2))))
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d = r*(acos*((sin(t1)*sin(t2)) + (cos(t1)* cos(t2)* cos(g1- g2))))
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:53:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P2: ")))
t2 = radians(float(input("Latitude de t2: ")))
g2 = radians(float(input("Longitude de g2: ")))
r = 6371.01
d = r*(acos*((sin(t1)*sin(t2)) + (cos(t1)* cos(t2)* cos(g1- g2))))
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d = r*(acos*((sin(t1)*sin(t2)) + (cos(t1)* cos(t2)* cos(g1- g2))))
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:53:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P2: ")))
t2 = radians(float(input("Latitude de t2: ")))
g2 = radians(float(input("Longitude de g2: ")))
r = 6371.01
d = r * (acos*((sin(t1)*sin(t2)) + (cos(t1)* cos(t2)* cos(g1- g2))))
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d = r * (acos*((sin(t1)*sin(t2)) + (cos(t1)* cos(t2)* cos(g1- g2))))
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:02:02) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P2: ")))
t2 = radians(float(input("Latitude de t2: ")))
g2 = radians(float(input("Longitude de g2: ")))
r = 6371.01
d = r * (acos*((sin(t1)*sin(t2)) + (cos(t1)* cos(t2)* cos(g1- g2))))
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d = r * (acos*((sin(t1)*sin(t2)) + (cos(t1)* cos(t2)* cos(g1- g2))))
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:02:38) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P2: ")))
t2 = radians(float(input("Latitude de t2: ")))
g2 = radians(float(input("Longitude de g2: ")))
r = 6371.01
d = float(r * (acos*((sin(t1)*sin(t2)) + (cos(t1)* cos(t2)* cos(g1- g2)))))
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d = float(r * (acos*((sin(t1)*sin(t2)) + (cos(t1)* cos(t2)* cos(g1- g2)))))
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:04:15) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import sin
from math  import cos
from math import acos
from math import radians
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P2: ")))
t2 = radians(float(input("Latitude de t2: ")))
g2 = radians(float(input("Longitude de g2: ")))
r = 6371.01
d = float(r * (acos*((sin(t1)*sin(t2)) + (cos(t1)* cos(t2)* cos(g1- g2)))))
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    d = float(r * (acos*((sin(t1)*sin(t2)) + (cos(t1)* cos(t2)* cos(g1- g2)))))
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:04:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import sin
from math  import cos
from math import acos
from math import radians
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P2: ")))
t2 = radians(float(input("Latitude de t2: ")))
g2 = radians(float(input("Longitude de g2: ")))
r = 6371.01
d = r * (acos*((sin(t1)*sin(t2)) + (cos(t1)* cos(t2)* cos(g1- g2))))
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    d = r * (acos*((sin(t1)*sin(t2)) + (cos(t1)* cos(t2)* cos(g1- g2))))
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:05:29) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import sin
from math  import cos
from math import acos
from math import radians
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P2: ")))
t2 = radians(float(input("Latitude de t2: ")))
g2 = radians(float(input("Longitude de g2: ")))
r = float(6371.01)
d = r * (acos*((sin(t1)*sin(t2)) + (cos(t1)* cos(t2)* cos(g1- g2))))
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    d = r * (acos*((sin(t1)*sin(t2)) + (cos(t1)* cos(t2)* cos(g1- g2))))
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:06:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import sin
from math  import cos
from math import acos
from math import radians
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P2: ")))
t2 = radians(float(input("Latitude de t2: ")))
g2 = radians(float(input("Longitude de g2: ")))
r = float(6371.01)
d = r * acos*((sin(t1)*sin(t2)) + cos(t1)* cos(t2)* cos(g1 - g2))
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    d = r * acos*((sin(t1)*sin(t2)) + cos(t1)* cos(t2)* cos(g1 - g2))
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:07:09) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import sin
from math  import cos
from math import acos
from math import radians
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P2: ")))
t2 = radians(float(input("Latitude de t2: ")))
g2 = radians(float(input("Longitude de g2: ")))
r = float(6371.01)
d = r * acos*(sin(t1)*sin(t2) + cos(t1)* cos(t2)* cos(g1 - g2))
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    d = r * acos*(sin(t1)*sin(t2) + cos(t1)* cos(t2)* cos(g1 - g2))
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:08:05) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import sin
from math  import cos
from math import acos
from math import radians
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P2: ")))
t2 = radians(float(input("Latitude de t2: ")))
g2 = radians(float(input("Longitude de g2: ")))
r = float(6371.01)
d = r * acos*(sin*(t1)* sin*(t2) + cos*(t1)* cos*(t2)* cos*(g1 - g2))
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    d = r * acos*(sin*(t1)* sin*(t2) + cos*(t1)* cos*(t2)* cos*(g1 - g2))
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:08:53) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P2: ")))
t2 = radians(float(input("Latitude de t2: ")))
g2 = radians(float(input("Longitude de g2: ")))
r = float(6371.01)
d = r * acos* sin*(t1)* sin*(t2) + cos*(t1)* cos*(t2)* cos*(g1 - g2)
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    d = r * acos* sin*(t1)* sin*(t2) + cos*(t1)* cos*(t2)* cos*(g1 - g2)
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:09:34) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P2: ")))
t2 = radians(float(input("Latitude de t2: ")))
g2 = radians(float(input("Longitude de g2: ")))

r = (6371.01)

d = r * acos* sin*(t1)* sin*(t2) + cos*(t1)* cos*(t2)* cos*(g1 - g2)

print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    d = r * acos* sin*(t1)* sin*(t2) + cos*(t1)* cos*(t2)* cos*(g1 - g2)
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:11:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P2: ")))
t2 = radians(float(input("Latitude de t2: ")))
g2 = radians(float(input("Longitude de g2: ")))

r = (6371.01)

d = r * acos(sin(t1)* sin(t2) + cos(t1)* cos(t2)* cos(g1 - g2))

print(round(d, 2))
-- OUTPUT:
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:11:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P2: ")))
t2 = radians(float(input("Latitude de t2: ")))
g2 = radians(float(input("Longitude de g2: ")))

r = (6371.01)

d = r * acos(sin(t1)* sin(t2) + cos(t1)* cos(t2)* cos(g1 - g2))

print(round(d, 2))
-- EXECUTION TIME:
0.116474
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
